--- a/locales/en.json
+++ b/locales/en.json
@@ -11,7 +11,8 @@
 			"discovery": "Searching for devices, one moment please",
 			"pairingkey": "Pairing key",
 			"pairingdescription": "Turn on your television and click the 'Request pairing key' button. Fill in the code that appears on your television.",
-			"requestpairingkey": "Request pairing key"
+			"requestpairingkey": "Request pairing key",
+			"requestPairing": "Try pairing"
 		}
   	}
 }
